install/kubernetes/agent/agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: argocd-agent-agent
  name: argocd-agent-agent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-agent-agent
      app.kubernetes.io/part-of: argocd-agent
      app.kubernetes.io/component: agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-agent-agent
        app.kubernetes.io/part-of: argocd-agent
        app.kubernetes.io/component: agent
    spec:
      containers:
        - args:
            - agent
          image: argocd-agent
          imagePullPolicy: Always
          name: argocd-agent-agent
          ports:
            - containerPort: 8000
              name: metrics
            - containerPort: 8002
              name: healthz
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: userpass-passwd
              mountPath: /app/config/creds
            - name: redis-tls-ca
              mountPath: /app/config/redis-tls
              readOnly: true
      serviceAccountName: argocd-agent-agent
      volumes:
      - name: userpass-passwd
        secret:
          secretName: argocd-agent-agent-userpass
          items:
          - key: credentials
            path: userpass.creds
          optional: true
      - name: redis-tls-ca
        secret:
          secretName: argocd-redis-tls
          items:
          - key: ca.crt
            path: ca.crt
          optional: true
