install/kubernetes/agent/agent-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app.kubernetes.io/name: argocd-agent-agent
      app.kubernetes.io/part-of: argocd-agent
      app.kubernetes.io/component: agent
  name: argocd-agent-agent-metrics
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 8181
      targetPort: 8181
  selector:
    app.kubernetes.io/name: argocd-agent-agent
